updates, healco employer, small styling fixes, added additional technologies

--- a/contact.html
+++ b/contact.html
@@ -77,9 +77,9 @@
     <!-- Footer -->
 
     <footer id="main-footer">
-      <div id="main-footer-items">
+      <div id="main-footer-items-contact">
         <div class="footer-main-name">
-          <h5>Robert Bishop | Web Developer</h5>
+          <h5>Robert Bishop | Full Stack Developer</h5>
         </div>
         <div class="footer-main-social">
           <ul>
