--- a/projects.html
+++ b/projects.html
@@ -48,14 +48,39 @@
         <p>Check out some of my projects</p>
       </section>
 
-      <!-- Capstone Project -->
+      <!-- Current Work -->
       <section id="capstone-project">
         <div class="long-line"></div>
         <h2>CURRENT WORK</h2>
-        <h3>TruLocal, Inc - Built with React</h3>
+        <h3>HealCo - TypeScript React</h3>
+        <div class="long-line"></div>
+        <div id="capstone-project-img-healco"></div>
+        <h3>Company Description</h3>
+        <p>
+          HealCo is focused on bringing medical providers to communities that need them the most.  HealCo has been helping providers expand their practices and share their underutilized medical space for two years. In 2020, they launched the Health System Without Walls initiative, which is enabling and facilitating telemedicine throughout the Jersey City, NJ area.  
+        </p>
+        <br />
+        <p>Recently, HealCoRx was launched, which is a low-cost, remote physician, prescription fulfillment and delivery service that offers several direct to consumer medication options as well as talk therapy introductions that provide mental health services.</p>
+        <br />
+        <p>
+          Our entire application is written in TypeScript on the front and back end.  I was asked to learn TypeScript as a requisite to employment as it was a product design requirement and I have enjoyed doing so.  Additionally, I was asked to research and begin to implement a testing framework using JEST and React Testing Library in our application without direction or supervision.  This was a greatly satisfying activity as I enjoy learning new technologies and seeing those contributions assist the team and improve the overall application quality. 
+        </p>
+        <br />
+        <p>
+          My responsibilities ranged from no-auth pillar page content to auth-route user and admin dashboard assignments.  Some of my tasks were UI based only, creating React custom wrapper components in order to leverage Ant Design Framework's functionality while meeting HealCo's specific needs.  Other projects employed the full stack of our technologies requiring use of our React Custom Hooks and functions utilizing koa and MySQL for all of our RESTful network requests.
+        </p>
+
+        <a href="https://www.healco.us/" target="_blank" class="btn"
+          >www.healco.us</a
+        >
+      <!-- Previous Work -->
+      <section id="capstone-project">
+        <div class="long-line"></div>
+        <h2>PREVIOUS WORK</h2>
+        <h3>TruLocal, Inc - React</h3>
         <div class="long-line"></div>
         <div id="capstone-project-img-truLocal"></div>
-        <h3>Project Description</h3>
+        <h3>Company Description</h3>
         <p>
           TruLocal is an e-commerce marketplace focused on local retailers. The
           mission of the site is to provide an efficient bridge between
@@ -78,6 +103,8 @@
         <a href="https://trulocal.com/" target="_blank" class="btn"
           >www.trulocal.com</a
         >
+
+        <!-- Capstone Project -->
         <div class="long-line"></div>
         <h2>CAPSTONE PROJECT</h2>
         <h3>
@@ -111,12 +138,12 @@
           <a href="https://youtu.be/IgaI8lv1QOQ" target="_blank" class="btn"
             >Demo Walk-through</a
           >
-          <a
+          <!-- <a
             href="https://aqueous-refuge-23431.herokuapp.com/"
             target="_blank"
             class="btn"
             >Jurn(<span>ease</span>) Live Application</a
-          >
+          > -->
         </div>
       </section>
 
@@ -284,7 +311,7 @@
     <footer id="main-footer">
       <div id="main-footer-items">
         <div class="footer-main-name">
-          <h5>Robert Bishop | Web Developer</h5>
+          <h5>Robert Bishop | Full Stack Developer</h5>
         </div>
         <div class="footer-main-social">
           <ul>
