--- a/resume.html
+++ b/resume.html
@@ -57,23 +57,190 @@
             <img src="assets/bioPic.png" alt="bioPic" />
           </div>
           <div>
-            <h3>React JS - Full Stack Web Developer</h3>
+            <h3>React JS - Full Stack Developer</h3>
             <p class="personalStatement">
-              I am an enthusiastic, self-disciplined and motivated worker. I
-              have the ability to work on teams and with management, as well as
-              learn new skills and work remotely. I would like to find a work
-              environment where I can continue to learn from others while
-              becoming a valuable member of a team.
+              The keys to my success have been communication and time management
+              skills along with a drive to learn new technologies. I am
+              experienced with working on deadlines, collaborating with team
+              members, and target goals that need to be achieved. I have learned
+              new technologies at the request of my supervisors and I am
+              dedicated to developing great looking websites that function
+              efficiently and intuitively.
             </p>
           </div>
-          <a href="assets/resumeDeveloper.pdf" class="btn" target="_blank"
+          <a
+            href="assets/resumeRobertBishopFullStackDev.pdf"
+            class="btn"
+            target="_blank"
             >PDF Resume</a
           >
-          <!-- <a href="https://youtu.be/dUDo47D2mQ8" target="_blank" class="btn"
-            >Watch My Bio Video</a
-          > -->
         </div>
       </section>
+      <section id="employment-history">
+        <h2>Employment History</h2>
+        <div class="long-line"></div>
+        <div>
+          <ul>
+            <li>
+              <span class="positions">HealCo - Full Stack Developer</span>
+            </li>
+          </ul>
+          <ul>
+            <li class="locations">Remote (NY/NJ based company)</li>
+            <li class="dates">Mar 2021 to current</li>
+          </ul>
+        </div>
+        <p>
+          HealCo is focused on bringing medical providers to communities that
+          need them the most. HealCo has been helping providers expand their
+          practices and share their underutilized medical space for two years.
+          In 2020, they launched the Health System Without Walls initiative,
+          which is enabling and facilitating telemedicine throughout the Jersey
+          City, NJ area. Recently, HealCoRx was launched, which is a low-cost,
+          remote physician, prescription fulfillment and delivery service that
+          offers several direct to consumer medication options as well as talk
+          therapy introductions that provide mental health services.
+        </p>
+        <p>
+          As a Full Stack Engineer, I worked with a lightweight engineering team
+          that relied on stellar communication, collaboration and
+          time-management. We followed a task-based milestone system and
+          expected everyone to contribute their best work with integrity and
+          passion. Since we worked closely together, it was important to be a
+          team player and learn from others. At the same time, everyone was
+          allowed a great degree of independence, so being self-motivated was a
+          must.
+        </p>
+        <p>
+          Our entire application is written in TypeScript on the front end and
+          back end. I was asked to learn TypeScript as a requisite to employment
+          as it was a product design requirement and I have enjoyed doing so.
+          Additionally, I was asked to research and begin to implement a testing
+          framework using JEST and React Testing Library in our application
+          without direction or supervision. This was a greatly satisfying
+          activity as I enjoy learning new technologies and seeing those
+          contributions assist the team and improve the overall application
+          quality.
+        </p>
+        <p>
+          Our team kept version control using GitHub and Notion for
+          documentation and a Kanban board for assignments. Weekly technical
+          showcases along with department meetings kept everyone on the same
+          page for our milestones and status of development.
+        </p>
+        <p>
+          Good communication, collaboration and time management were critical
+          aspects of my success. I believe my willingness to learn new
+          technologies, a drive to solve problems and remaining highly motivated
+          made me a valuable member of the team.
+        </p>
+        <div>
+          <ul>
+            <li>
+              <span class="positions"
+                >TruLocal, Inc - React JS Software Engineer</span
+              >
+            </li>
+          </ul>
+          <ul>
+            <li class="locations">Remote (CA Bay Area based company)</li>
+            <li class="dates">Sept 2020​ to Jan 2021</li>
+          </ul>
+        </div>
+        <p>
+          TruLocal is an e-commerce marketplace focused on local retailers. The
+          mission of the site is to provide an efficient bridge between
+          consumers and their local retailers across all product categories.
+          Consumers can see what's in a store and buy online directly through
+          TruLocal, and Retailers reach more local consumers through TruLocal's
+          marketplace.
+        </p>
+        <p>
+          My responsibilities were primarily on the Search route of the
+          application leveraging Algolia and creating a responsive UI based on
+          Figma designs. All routes were expected to be fully responsive,
+          utilizing Chrome Developer Tools and modern CSS3 FlexBox and Grid
+          Layouts, we were able to quickly assemble beautiful layouts on all
+          screen sizes. I was in good communication with the design team in
+          order to keep the application true to their requirements while
+          offering suggestions on functionality options available that could be
+          integrated into the components. I worked with others to create a
+          dynamic front end user experience utilizing Material-UI React
+          components per the design theme requirements and included cypress
+          tagging in the elements all while working directly with QA to ensure a
+          smooth process.
+        </p>
+        <p>
+          The search interface was wired with Algolia. My teammate and I
+          researched and implemented Algolia’s SearchContext and Algolia’s React
+          connected widgets to provide the desired search results and filtering
+          options. Having been one of the most familiar with Algolia, I was
+          frequently asked to educate teammates on the best implementation
+          strategy of the search results in their tasks.
+        </p>
+        <p>
+          My team kept version control using Atlassian BitBucket while using
+          JIRA tickets and Confluence resource pages to collaborate. I
+          participated in daily stand-ups and weekly sprints led by the VP of
+          Software Engineering / Project Manager with the development team in an
+          Agile environment.
+        </p>
+        <div>
+          <ul>
+            <li>
+              <span class="positions"
+                >Technology Credit Union - IDL Manager / Business Development /
+                Sr. Banker</span
+              >
+            </li>
+          </ul>
+          <ul>
+            <li class="locations">SF Bay Area, CA</li>
+            <li class="dates">Spring 2014​ to Winter 2019​</li>
+          </ul>
+        </div>
+        <p>
+          After leaving San Jose, CA to move to Las Vegas, NV, TechCU offered me
+          the opportunity to pilot a new remote role at the Credit Union. TechCU
+          was looking for the right employee candidate to test this program due
+          to the discipline required and security concerns of working in real
+          time with customer banking details from home.
+        </p>
+        <p>
+          The pilot included cooperation with myself, IT, the Executive Team,
+          the AVP and VP of the Contact Center in order to make this project a
+          success. We were successful in that I was a fully functional Remote
+          Contact Center Specialist while living full-time in Las Vegas for the
+          entire term of the 12 month trial.
+        </p>
+      </section>
+
+      <!-- Technology Experience -->
+
+      <section id="tech-experience">
+        <h2>Technology Experience</h2>
+        <div class="long-line"></div>
+        <div class="specialize-icons">
+          <ul>
+            <li id="html5"></li>
+            <li id="css3"></li>
+            <li id="javascript"></li>
+            <li id="typescript"></li>
+            <li id="sass"></li>
+            <li id="antdesign"></li>
+            <li id="materialui"></li>
+            <li id="semanticui"></li>
+            <li id="react"></li>
+            <li id="redux"></li>
+            <li id="jquery"></li>
+            <li id="nodejs"></li>
+            <li id="express"></li>
+            <li id="koa"></li>
+            <li id="mysql"></li>
+          </ul>
+        </div>
+      </section>
+
       <section id="education">
         <h2>Education</h2>
         <div class="long-line"></div>
@@ -97,172 +264,6 @@
           </ul>
         </div>
       </section>
-      <section id="employment-history">
-        <h2>Employment History</h2>
-        <div class="long-line"></div>
-        <!-- <div>
-          <ul>
-            <li><h4 h4 class="employers">Technology Credit Union</h4></li>
-            <li>
-              <span class="positions"
-                >Remote Universal Contact Center Specialist</span
-              >
-            </li>
-          </ul>
-          <ul>
-            <li class="locations">Remote - Las Vegas, NV</li>
-            <li class="dates">Jan. 2019 to Dec. 2019</li>
-          </ul>
-        </div>
-
-        <p>
-          After leaving San Jose, CA to move to Las Vegas, NV, my employer
-          TechCU offered me the opportunity to pilot a new remote role at the
-          Credit Union. TechCU was looking for the right employee candidate to
-          test this program due to the discipline required and security concerns
-          of working in real time with customer banking details from home. The
-          pilot included cooperation with myself, IT, the Executive Team, the
-          AVP and VP of the Contact Center in order to make this project a
-          success. We were successful in that I was a fully functional Contact
-          Center Specialist for a CA Credit Union while living full-time in Las
-          Vegas for the entire term of the 12 month trial. Many employees did
-          not know I was remote and none of our customers knew. The Executive
-          Team was able to approve the program with our Board of Directors and
-          implement the remote model across several departments in 2019 making
-          this remote agent pilot program a success. My specific
-          responsibilities included all banking verification and full account
-          services for our customers.
-        </p> -->
-        <div>
-          <ul>
-            <li>
-              <span class="positions"
-                >TruLocal, Inc - React JS Software Engineer</span
-              >
-            </li>
-          </ul>
-          <ul>
-            <li class="locations">Remote (CA Bay Area based company)</li>
-            <li class="dates">Sept. 2020​ to Current</li>
-          </ul>
-        </div>
-        <p>
-          My responsibilities at TruLocal have been primarily dedicated to the
-          Search route of the website. I was hired to create a dynamic front end
-          user experience utilizing Material-UI react components and a search
-          engine interface powered by Algolia. My team was supplied Figma
-          designs and kept version control using Atlassian BitBucket while using
-          JIRA tickets and Confluence resource pages to collaborate. I
-          participated in daily stand-ups and weekly sprints with the
-          development team. Having been one of the most familiar with Algolia, I
-          was frequently asked to educate teammates on the best implementation
-          strategy of the search results in their tasks.
-        </p>
-        <div>
-          <ul>
-            <li>
-              <span class="positions"
-                >Technology Credit Union - IDL Manager / Business Development /
-                Sr. Banker</span
-              >
-            </li>
-          </ul>
-          <ul>
-            <li class="locations">SF Bay Area, CA</li>
-            <li class="dates">Spring 2014​ to Winter 2019​</li>
-          </ul>
-        </div>
-        <p>
-          After leaving San Jose, CA to move to Las Vegas, NV, TechCU offered me
-          the opportunity to pilot a new remote role at the Credit Union. TechCU
-          was looking for the right employee candidate to test this program due
-          to the discipline required and security concerns of working in real
-          time with customer banking details from home. The pilot included
-          cooperation with myself, IT, the Executive Team, the AVP and VP of the
-          Contact Center in order to make this project a success. We were
-          successful in that I was a fully functional Remote Contact Center
-          Specialist while living full-time in Las Vegas for the entire term of
-          the 12 month trial.
-        </p>
-        <!-- <div>
-          <ul>
-            <li><h4 class="employers">Carnival Cruise Lines</h4></li>
-            <li>
-              <span class="positions">Musician</span>
-            </li>
-          </ul>
-          <ul>
-            <li class="locations">OnBoard Cruise Ships</li>
-            <li class="dates">Jun. 2008 to Aug 2012</li>
-          </ul>
-        </div>
-        <p>
-          A life long passion of mine is playing music. In 2008, I followed my
-          passion of playing drums into a lifestyle by taking a position as an
-          onboard musician on cruise ships. Living on ships and playing music
-          was a very unique and enjoyable experience in my life, affording me an
-          opportunity to travel to many places and meet my wife along the way.
-        </p>
-        <div>
-          <ul>
-            <li><h4 class="employers">Members Mortgage Solutions</h4></li>
-            <li>
-              <span class="positions">Mortgage Loan Originator</span>
-            </li>
-          </ul>
-          <ul>
-            <li class="locations">Richmond, VA</li>
-            <li class="dates">May 2006 to May 2008</li>
-          </ul>
-        </div>
-        <p>
-          In addition to facilitating the loan process for customers purchasing
-          homes, mortgage loan officer develops accounts with lead sources such
-          as Credit Unions and Realtors. My time was split between business
-          development and customer application duties while working at Member
-          Mortgage Solutions. I left the job due to the 2008 mortgage crisis,
-          there were no home loans available and no customers purchasing at that
-          time.
-        </p> -->
-      </section>
-
-      <!-- Technology Experience -->
-
-      <section id="tech-experience">
-        <h2>Technology Experience</h2>
-        <div class="long-line"></div>
-        <div class="tech-experience-icons">
-          <ul>
-            <li id="html5-2"></li>
-            <li id="css3-2"></li>
-            <li id="javascript-2"></li>
-            <li id="jquery-2"></li>
-            <li id="react-2"></li>
-            <li id="redux-2"></li>
-            <li id="nodejs-2"></li>
-            <li id="express-2"></li>
-            <li id="mysql-2"></li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- Capstone -->
-      <section id="capstone">
-        <h2>Jurn(<span>ease</span>) CAPSTONE PROJECT</h2>
-        <div class="long-line"></div>
-        <p>
-          My capstone project for the PunchCode curriculum is called
-          Jurn(<span>ease</span>). It is a vacation planning site aimed at
-          making the planning process cooperative between groups of travelers
-          and relieving the stress of that process.
-        </p>
-        <div class="capstone-btns">
-          <a href="projects.html#capstone-project" class="btn"
-            >Explore Jurn(<span>ease</span>)</a
-          >
-          <!-- <a href="assets/resume.pdf" class="btn" target="_blank">PDF Resume</a> -->
-        </div>
-      </section>
     </div>
 
     <!-- Footer -->
@@ -270,7 +271,7 @@
     <footer id="main-footer">
       <div id="main-footer-items">
         <div class="footer-main-name">
-          <h5>Robert Bishop | Web Developer</h5>
+          <h5>Robert Bishop | Full Stack Developer</h5>
         </div>
         <div class="footer-main-social">
           <ul>
