--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
           <span
             class="txt-type"
             data-wait="2500"
-            data-words='["Web Developer"]'
+            data-words='["Full Stack Developer"]'
           ></span>
         </h1>
-        <p>I develop responsive design websites using modern frameworks.</p>
-        <a href="projects.html" class="btn">View My Projects</a>
+        <p>I develop responsive websites using modern frameworks.</p>
+        <a href="projects.html" class="btn">My Projects</a>
+        <a
+          href="assets/resumeRobertBishopFullStackDev.pdf"
+          class="btn"
+          target="_blank"
+          >PDF Resume</a
+        >
       </div>
     </header>
 
@@ -60,11 +66,13 @@
           </div>
           <div>
             <p class="personalStatement">
-              I am an enthusiastic, self-disciplined and motivated worker. I
-              have the ability to work on teams and with management, as well as
-              learn new skills and work remotely. I would like to find a work
-              environment where I can continue to learn from others while
-              becoming a valuable member of a team.
+              The keys to my success have been communication and time management
+              skills along with a drive to learn new technologies. I am
+              experienced with working on deadlines, collaborating with team
+              members, and target goals that need to be achieved. I have learned
+              new technologies at the request of my supervisors and I am
+              dedicated to developing great looking websites that function
+              efficiently and intuitively.
             </p>
           </div>
         </div>
@@ -110,11 +118,17 @@
             <li id="html5"></li>
             <li id="css3"></li>
             <li id="javascript"></li>
-            <li id="jquery"></li>
+            <li id="typescript"></li>
+            <li id="sass"></li>
+            <li id="antdesign"></li>
+            <li id="materialui"></li>
+            <li id="semanticui"></li>
             <li id="react"></li>
             <li id="redux"></li>
+            <li id="jquery"></li>
             <li id="nodejs"></li>
             <li id="express"></li>
+            <li id="koa"></li>
             <li id="mysql"></li>
           </ul>
         </div>
@@ -126,7 +140,7 @@
     <footer id="main-footer">
       <div id="main-footer-items">
         <div class="footer-main-name">
-          <h5>Robert Bishop | Web Developer</h5>
+          <h5>Robert Bishop | Full Stack Developer</h5>
         </div>
         <div class="footer-main-social">
           <ul>
