minor styling fix to contact page

--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
     <!-- Footer -->
 
     <footer id="main-footer">
-      <div id="main-footer-items-contact">
+      <div id="main-footer-items">
         <div class="footer-main-name">
           <h5>Robert Bishop | Full Stack Developer</h5>
         </div>
