--- a/projects.html
+++ b/projects.html
@@ -311,7 +311,7 @@
     <footer id="main-footer">
       <div id="main-footer-items">
         <div class="footer-main-name">
-          <h5>Robert Bishop | Full Stack Developer</h5>
+          <h5>Rob Bishop | Full Stack Developer</h5>
         </div>
         <div class="footer-main-social">
           <ul>
