updated pdf resume, updated resume page, styling changes to about me

--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
         </h1>
         <p>I develop responsive websites using modern frameworks.</p>
         <a href="projects.html" class="btn">My Projects</a>
-        <a
-          href="assets/resumeRobertBishopFullStackDev.pdf"
-          class="btn"
-          target="_blank"
+        <a href="assets/resumeRobertBishopDev.pdf" class="btn" target="_blank"
           >PDF Resume</a
         >
       </div>
@@ -64,8 +61,9 @@
           <div>
             <img src="assets/bioPic.png" alt="bioPic" />
           </div>
-          <div>
-            <p class="personalStatement">
+          <div class="quoted-statement">
+            <i class="fas fa-quote-left"> </i>
+            <p>
               The keys to my success have been communication and time management
               skills along with a drive to learn new technologies. I am
               experienced with working on deadlines, collaborating with team
