--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
 
     <div class="wrapper">
       <section id="projects">
-        <h2>My Projects</h2>
+        <h2>My Projects and Work Applications</h2>
         <div class="small-line"></div>
 
         <p>Check out some of my projects</p>
@@ -67,7 +67,7 @@
         </p>
         <br />
         <p>
-          My responsibilities ranged from no-auth pillar page content to auth-route user and admin dashboard assignments.  Some of my tasks were UI based only, creating React custom wrapper components in order to leverage Ant Design Framework's functionality while meeting HealCo's specific needs.  Other projects employed the full stack of our technologies requiring use of our React Custom Hooks and functions utilizing koa and MySQL for all of our RESTful network requests.
+          My responsibilities ranged from creating standard content components to secure portal HIPAA-compliant content using modern authentication techniques.  Some of my tasks were UI based only, creating React custom wrapper components in order to leverage Ant Design Framework's functionality while meeting HealCo's specific needs.  Other projects employed the full stack of our technologies requiring use of our React Custom Hooks and functions utilizing koa and MySQL for all of our RESTful network requests.
         </p>
 
         <a href="https://www.healco.us/" target="_blank" class="btn"
