--- a/resume.html
+++ b/resume.html
@@ -56,9 +56,9 @@
           <div>
             <img src="assets/bioPic.png" alt="bioPic" />
           </div>
-          <div>
-            <h3>React JS - Full Stack Developer</h3>
-            <p class="personalStatement">
+          <div class="quoted-statement">
+            <i class="fas fa-quote-left"> </i>
+            <p>
               The keys to my success have been communication and time management
               skills along with a drive to learn new technologies. I am
               experienced with working on deadlines, collaborating with team
@@ -68,10 +68,7 @@
               efficiently and intuitively.
             </p>
           </div>
-          <a
-            href="assets/resumeRobertBishopFullStackDev.pdf"
-            class="btn"
-            target="_blank"
+          <a href="assets/resumeRobertBishopDev.pdf" class="btn" target="_blank"
             >PDF Resume</a
           >
         </div>
@@ -90,50 +87,50 @@
             <li class="dates">Mar 2021 to current</li>
           </ul>
         </div>
-        <p>
-          HealCo is focused on bringing medical providers to communities that
-          need them the most. HealCo has been helping providers expand their
-          practices and share their underutilized medical space for two years.
-          In 2020, they launched the Health System Without Walls initiative,
-          which is enabling and facilitating telemedicine throughout the Jersey
-          City, NJ area. Recently, HealCoRx was launched, which is a low-cost,
-          remote physician, prescription fulfillment and delivery service that
-          offers several direct to consumer medication options as well as talk
-          therapy introductions that provide mental health services.
-        </p>
-        <p>
-          As a Full Stack Engineer, I worked with a lightweight engineering team
-          that relied on stellar communication, collaboration and
-          time-management. We followed a task-based milestone system and
-          expected everyone to contribute their best work with integrity and
-          passion. Since we worked closely together, it was important to be a
-          team player and learn from others. At the same time, everyone was
-          allowed a great degree of independence, so being self-motivated was a
-          must.
-        </p>
-        <p>
-          Our entire application is written in TypeScript on the front end and
-          back end. I was asked to learn TypeScript as a requisite to employment
-          as it was a product design requirement and I have enjoyed doing so.
-          Additionally, I was asked to research and begin to implement a testing
-          framework using JEST and React Testing Library in our application
-          without direction or supervision. This was a greatly satisfying
-          activity as I enjoy learning new technologies and seeing those
-          contributions assist the team and improve the overall application
-          quality.
-        </p>
-        <p>
-          Our team kept version control using GitHub and Notion for
-          documentation and a Kanban board for assignments. Weekly technical
-          showcases along with department meetings kept everyone on the same
-          page for our milestones and status of development.
-        </p>
-        <p>
-          Good communication, collaboration and time management were critical
-          aspects of my success. I believe my willingness to learn new
-          technologies, a drive to solve problems and remaining highly motivated
-          made me a valuable member of the team.
-        </p>
+        <ul class="work-history-list-items">
+          <li>
+            Constructed highly reusable and extendable React wrapper components
+            around the stock Ant Design framework to accelerate and facilitate
+            development.
+          </li>
+          <li>
+            Created components ranging from standard content to secure portal
+            HIPAA-compliant content using modern authentication techniques.
+          </li>
+          <li>
+            Completed full stack projects using our React Custom Hooks and
+            functions utilizing Koa.JS and MySQL for all of our RESTful network
+            requests.
+          </li>
+          <li>
+            Improved security around the HealCo mailing list signup component on
+            our landing page.
+          </li>
+          <li>
+            Learned and used TypeScript in the front and back end code of our
+            application. Updated legacy code and created new components to be
+            type-safe utilizing TypeScript.
+          </li>
+          <li>
+            Researched unit and integration testing frameworks and integrated
+            Jest into the HealCo project to improve the quality of the
+            development workflow.
+          </li>
+          <li>
+            Leveraged multi-disciplinary past career experience to contribute
+            valuable input on solving roadblocks in our site's UX while offering
+            advice on our online ad strategy that improved our conversion rate.
+          </li>
+          <li>
+            Worked closely with and learned from others as a part of a
+            lightweight engineering team that relied on stellar communication,
+            collaboration and time-management.
+          </li>
+          <li>
+            Followed a task-based milestone system that expected everyone to
+            contribute their best work with integrity and passion.
+          </li>
+        </ul>
         <div>
           <ul>
             <li>
@@ -147,44 +144,39 @@
             <li class="dates">Sept 2020​ to Jan 2021</li>
           </ul>
         </div>
-        <p>
-          TruLocal is an e-commerce marketplace focused on local retailers. The
-          mission of the site is to provide an efficient bridge between
-          consumers and their local retailers across all product categories.
-          Consumers can see what's in a store and buy online directly through
-          TruLocal, and Retailers reach more local consumers through TruLocal's
-          marketplace.
-        </p>
-        <p>
-          My responsibilities were primarily on the Search route of the
-          application leveraging Algolia and creating a responsive UI based on
-          Figma designs. All routes were expected to be fully responsive,
-          utilizing Chrome Developer Tools and modern CSS3 FlexBox and Grid
-          Layouts, we were able to quickly assemble beautiful layouts on all
-          screen sizes. I was in good communication with the design team in
-          order to keep the application true to their requirements while
-          offering suggestions on functionality options available that could be
-          integrated into the components. I worked with others to create a
-          dynamic front end user experience utilizing Material-UI React
-          components per the design theme requirements and included cypress
-          tagging in the elements all while working directly with QA to ensure a
-          smooth process.
-        </p>
-        <p>
-          The search interface was wired with Algolia. My teammate and I
-          researched and implemented Algolia’s SearchContext and Algolia’s React
-          connected widgets to provide the desired search results and filtering
-          options. Having been one of the most familiar with Algolia, I was
-          frequently asked to educate teammates on the best implementation
-          strategy of the search results in their tasks.
-        </p>
-        <p>
-          My team kept version control using Atlassian BitBucket while using
-          JIRA tickets and Confluence resource pages to collaborate. I
-          participated in daily stand-ups and weekly sprints led by the VP of
-          Software Engineering / Project Manager with the development team in an
-          Agile environment.
-        </p>
+
+        <ul class="work-history-list-items">
+          <li>
+            Leveraged Algolia on the search route and created a responsive UI
+            based on Figma designs.
+          </li>
+          <li>
+            Utilized Chrome Developer Tools and modern CSS3 FlexBox and Grid to
+            quickly assemble beautiful layouts on all screen sizes.
+          </li>
+          <li>
+            Communicated with the design team and offered suggestions on
+            functionality options available for integration into the components.
+          </li>
+          <li>
+            Used Material-UI React components including cypress tagging in the
+            elements while working directly with QA to ensure a smooth
+            continuous integration process.
+          </li>
+          <li>
+            Implemented Algolia’s SearchContext and Algolia’s React connected
+            widgets to provide the desired search results and filtering options.
+          </li>
+          <li>
+            Educated teammates on the best implementation strategy of the search
+            results in their tasks.
+          </li>
+          <li>
+            Participated in daily stand-ups and weekly sprints led by the VP of
+            Software Engineering / Project Manager with the development team in
+            an Agile environment.
+          </li>
+        </ul>
         <div>
           <ul>
             <li>
@@ -199,20 +191,18 @@
             <li class="dates">Spring 2014​ to Winter 2019​</li>
           </ul>
         </div>
-        <p>
-          After leaving San Jose, CA to move to Las Vegas, NV, TechCU offered me
-          the opportunity to pilot a new remote role at the Credit Union. TechCU
-          was looking for the right employee candidate to test this program due
-          to the discipline required and security concerns of working in real
-          time with customer banking details from home.
-        </p>
-        <p>
-          The pilot included cooperation with myself, IT, the Executive Team,
-          the AVP and VP of the Contact Center in order to make this project a
-          success. We were successful in that I was a fully functional Remote
-          Contact Center Specialist while living full-time in Las Vegas for the
-          entire term of the 12 month trial.
-        </p>
+        <ul class="work-history-list-items">
+          <li>
+            Ensured a smooth process for our customers by collaborating with our
+            dealer contacts, TechCU's banking staff, and the Underwriting
+            Department.
+          </li>
+          <li>
+            Piloted a new remote role at the Credit Union that required
+            cooperation with IT, the Executive Team, the AVP and VP of the
+            Contact Center in order to make the project a success.
+          </li>
+        </ul>
       </section>
 
       <!-- Technology Experience -->
