styling fixes to contact pages, small text updates to projects

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,8 @@
     ></script>
   </head>
   <body>
+    <!-- Layout Wrapper -->
+    <div id="layout-wrapper">
     <!-- Header -->
     <header id="main-header">
       <div id="main-header-nav">
@@ -76,8 +78,8 @@
 
     <!-- Footer -->
 
-    <footer id="main-footer">
-      <div id="main-footer-items">
+    <footer id="main-footer" class="contact-footer">
+      <div id="main-footer-items" class="contact-footer-items">
         <div class="footer-main-name">
           <h5>Rob Bishop | Full Stack Developer</h5>
         </div>
@@ -104,5 +106,6 @@
         </div>
       </div>
     </footer>
+  </div>
   </body>
 </html>
