--- a/projects.html
+++ b/projects.html
@@ -42,10 +42,7 @@
 
     <div class="wrapper">
       <section id="projects">
-        <h2>My Projects and Work Applications</h2>
-        <div class="small-line"></div>
-
-        <p>Check out some of my projects</p>
+        <h2>Projects and Work Applications</h2>
       </section>
 
       <!-- Current Work -->
