updated new pdf resume and resume section to show VetHead Brand as a contract employment

--- a/resume.html
+++ b/resume.html
@@ -181,6 +181,32 @@
           <ul>
             <li>
               <span class="positions"
+                >VetHead Brand - Full Stack Engineer - Contract</span
+              >
+            </li>
+          </ul>
+          <ul>
+            <li class="locations">Las Vegas, NV</li>
+            <li class="dates">June 2020 to July 2020​</li>
+          </ul>
+        </div>
+        <ul class="work-history-list-items">
+          <li>
+            Collaborated with a partner to create a React application that
+            utilized the Shopify SDK.
+          </li>
+          <li>
+            Provided checkout functionality and client data from the store.
+          </li>
+          <li>
+            Ensured end to end functionality with the ability to process orders
+            with fully responsive design at desktop down to mobile screens.
+          </li>
+        </ul>
+        <div>
+          <ul>
+            <li>
+              <span class="positions"
                 >Technology Credit Union - IDL Manager / Business Development /
                 Sr. Banker</span
               >
